--- a/views/delete-task.ejs
+++ b/views/delete-task.ejs
@@ -5,8 +5,8 @@
         <div class="confirm">
             <h3>Do you really want to delete this task?</h3>
             <br>
-            <a class="btn" href="/">yes</a>
-            <a class="btn" href="/">no</a>
+            <a class="btn" href="/confirm-delete?id=<%id%>&confirm=yes">yes</a>
+            <a class="btn" href="/confirm-delete?id=<%id%>&confirm=no">no</a>
         </div>
     </div>
 <%- include("partials/footer") %>
