--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
     <div class="table-container">
-        <h1  class="todo-title">To Do</h1>
+        <h1  class="task-title">To Do</h1>
         <div class="">
             <a class="btn" href="/add-new-task">Add a task</a>
             <br>
@@ -13,18 +13,18 @@
                     <th>Created at</th>
                     <th>Updated at</th>
                     <th>Action</th>
-                </tr>
-                <% for(let i=0; i < todos.length; i++){%>
+                </tr>   
+                <% for(let i=0; i < tasks.length; i++){%>
                     <tr>    
                         <td><%= i+1 %></td>
-                        <td><%= todos[i].title %></td>
-                        <td><%= todos[i].desc %></td>
-                        <td><%= moment(todos[i].createdAt).format("MMM DD, YYYY HH:mm:ss") %></td>
-                        <td><%= moment(todos[i].updatedAt).format("MMM DD, YYYY HH:mm:ss") %></td>
+                        <td><%= tasks[i].title %></td>
+                        <td><%= tasks[i].desc %></td>
+                        <td><%= moment(tasks[i].createdAt).format("MMM DD, YYYY HH:mm:ss") %></td>
+                        <td><%= moment(tasks[i].updatedAt).format("MMM DD, YYYY HH:mm:ss") %></td>
                         <td>
-                            <a class="btn" href="/update-task">edit</a>
+                            <a class="btn" href="/update-task?id=<%=tasks[i]._id%>">edit</a>
                             <br><br>
-                            <a class="btn" href="/delete-task">delete</a>
+                            <a class="btn" href="/delete-task?id=<%=tasks[i]._id%>">delete</a>
                         </td>
                     </tr>
                 <% } %>
