--- a/views/add-task.ejs
+++ b/views/add-task.ejs
@@ -1,16 +1,16 @@
 <%- include("partials/header") %>
     <div class="table-container">
-      <h2 class="todo-title">Add todo</h2>
+      <h2 class="task-title">Add task</h2>
 
       <div>
         <a class="btn" href="/">Back</a>
 
         <form action="/add-new-task" method="post">
-          <div class="new-todo">
+          <div class="new-task">
 
             <div class="form-group">
               <label for="title" class="text-light">Title</label>
-              <input type="text" name="title" value="" placeholder="Type todo here" id="title" required/>
+              <input type="text" name="title" value="" placeholder="Type task here" id="title" required/>
             </div>
 
             <div class="form-group">
