made many changes in CSS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <%- include('partials/header') %>
-    <div class="table-container">
+    <div class="heading-container">
         <h1  class="task-title">To Do</h1>
+    </div>
+    <br>
+    <div class="table-container">
         <div class="">
             <a class="btn" href="/add-new-task">Add a task</a>
             <br>
