--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,8 +1,23 @@
+body{
+  background-image: url("https://images.unsplash.com/photo-1507925921958-8a62f3d1a50d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8dG8lMjBkbyUyMGxpc3R8ZW58MHx8MHx8fDI%3D");
+  background-size: 100% 100%;
+}
+
 .table-container {
+  background-color: rgb(255, 255, 255,0.7);
   border: 1px solid #bbb;
-  width: 70%;
+  width: 50%;
   margin: 0 auto;
-  padding: 0px 30px 30px 30px;
+  padding: 20px 30px 30px 30px;
+  border-radius: 10px;
+}
+
+.heading-container {
+  background-color: rgb(255, 255, 255,0.7);
+  border: 1px solid #bbb;
+  width: 50%;
+  margin: 0 auto;
+  padding: 0px 30px 0px 30px;
   border-radius: 10px;
 }
 
@@ -15,27 +30,33 @@ table {
   border-collapse: collapse;
   width: 100%;
 }
-  
+
+th {
+  background-color:  grey;
+}
+
+td{
+  background-color: white;
+}
+
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
 }
   
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-  
 .btn {
+  background-color:  white;
   border: 1px solid #bbb;
   padding: 4px 10px;
-  border-radius: 4px;
+  border-radius: 7px;
   text-decoration: none;
   color: #000;
+  box-shadow: 10  px #000;
 }
   
 .btn:hover {
-  background-color: #ccc;
+  background-color: white;
   color: #555;
   cursor: pointer;
 }
