--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -70,23 +70,21 @@ td, th {
     margin: 0.4em 0;
 }
   
-  .form-group input[type="text"],
-  .new-task .form-group input[type="text"],
-  .update-task .form-group input[type="text"] {
-    width: 100%;
-    padding: 0.6em 1em;
-    margin: 0.5em 0;
-    border: 1px solid #aaa;
-    font-family: "Barlow", sans-serif;
-    font-size: 1em;
-    border-radius: 0.2em;
-  }
+.form-group input[type="text"], .new-task .form-group input[type="text"], .update-task .form-group input[type="text"] {
+  width: 100%;
+  padding: 0.6em 1em;
+  margin: 0.5em 0;
+  border: 1px solid #aaa;
+  font-family: "Barlow", sans-serif;
+  font-size: 1em;
+  border-radius: 0.2em;
+}
   
-  .confirm {
-    border: 1px solid #ddd;
-    width: 786px;
-    margin: 0 auto;
-    padding: 30px 0px;
-    text-align: center;
-    border-radius: 10px;
-  }
+.confirm {
+  border: 1px solid #ddd;
+  width: 786px;
+  margin: 0 auto;
+  padding: 30px 0px;
+  text-align: center;
+  border-radius: 10px;
+}
